--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,7 @@
     <property file="build.properties" />
 
     <!-- Set up FlexUnit Ant tasks -->
-    <taskdef resource="flexTasks.tasks" classpath="${lib.loc}/flexTasks.jar" />
+    <taskdef resource="flexTasks.tasks" classpath="${FLEX_HOME}/ant/lib/flexTasks.jar" />
 
     <!-- Add the ant-contrib tasks -->
     <taskdef resource="net/sf/antcontrib/antcontrib.properties" classpath="${lib.loc}/ant-contrib.jar" />
