new workspace reset

--- a/build.properties
+++ b/build.properties
@@ -30,18 +30,18 @@ compile.type = debug
 #compiler mode: debug, optimize, apparat
 
 # Build paths
-FLEX_HOME = D:/Application/IDE/FDT/Flex4.6
+FLEX_HOME = C:/Users/Nick/Documents/Flex
 
 #Properties file for build.xml
 project.name = BorlorjaiAdventure
 
 #Version number
-ver.num=v0.9.0-beta
+ver.num=v0.9.5-beta
 project.name.versioned=${project.name}-${ver.num}
 deploy.name.versioned=${project.name}-${ver.num}
 
 #browser
-browser = C:/Program Files (x86)/Google/Chrome/Application/chrome.exe
+browser = C:/Users/Nick/AppData/Local/Google/Chrome/Application/chrome.exe
 report.url = ${report.loc}/html/index.html
 
 #Air Dev
